<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_up_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoDragView="@id/button_group"
        sothree:umanoFadeColor="@android:color/transparent"
        sothree:umanoOverlay="true"
        sothree:umanoPanelHeight="61dp"
        sothree:umanoScrollableView="@id/scrollView"
        sothree:umanoShadowHeight="0dp"
        tools:context=".MainActivity">

        <!-- slidingUpPanel must only have 2 children (1.: map, 2.: show when sliding-->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="com.example.huber.MainActivity">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:ignore="FragmentTagUsage" />

            <!-- WARNING: layout_height must be wrap content, or else suggestions are not shown -->
            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/searchBar"
                style="@style/MaterialSearchBarLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/searchBar_margin"
                android:layout_marginTop="@dimen/searchBar_margin"
                android:layout_marginEnd="64dp"
                android:visibility="visible"
                app:mt_hint="@string/search_hint"
                app:mt_navIconEnabled="true"
                app:mt_placeholder="@string/search_hint"
                app:mt_speechMode="false" />
            <!-- android:layout_height="wrap_content" -->
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@android:color/white"
            android:gravity="center|top"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/button_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pull_up_size"
                android:layout_marginVertical="-5.5dp">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/button_group_overview_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    sothree:selectionRequired="true"
                    sothree:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/overview"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/pull_up_size"
                        android:layout_weight="1"
                        android:onClick="getOverview"
                        android:text="@string/overview_button" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/favorites"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/pull_up_size"
                        android:layout_weight="1"
                        android:onClick="getFavourites"
                        android:text="@string/favorites_button" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sliding_up_panel_handle"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pull_up_size"
                    android:clickable="false"
                    android:visibility="visible"
                    sothree:icon="@drawable/ic_drag_handle_black_24dp"
                    sothree:iconGravity="textStart" />
                <!--<ImageView
                    android:id="@+id/sliding_up_panel_handle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/ic_drag_handle_black_24dp"
                    android:visibility="visible"
                    />
                    -->
            </FrameLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

                <LinearLayout
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
